fix menu on mobile fix search on mobile and desktop add pages to search

--- a/wp-content/themes/tmwf/css/styles.css
+++ b/wp-content/themes/tmwf/css/styles.css
@@ -421,6 +421,10 @@ html {
   margin: 0;
   overflow-x: hidden;
 }
+body.active,
+html.active {
+  overflow: hidden;
+}
 
 ::-moz-selection {
   background: #58595b;
@@ -495,6 +499,13 @@ header {
           align-items: center;
   height: 125px;
 }
+@media only screen and (max-width: 75em) {
+  .search-wrapper .search-header .close {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+}
 .search-wrapper .search-header .close a {
   color: #fff;
   display: -webkit-box;
@@ -542,6 +553,11 @@ header {
   border-bottom: 3px solid #fff;
   padding: 1.5rem 0;
 }
+@media only screen and (max-width: 75em) {
+  .search-wrapper .search-container .search-input input {
+    font-size: 2.8rem;
+  }
+}
 .search-wrapper .search-container .search-input input::-webkit-input-placeholder {
   color: rgba(255, 255, 255, 0.7);
 }
@@ -565,12 +581,18 @@ header {
   margin-top: 3rem;
   -ms-overflow-style: none !important;
 }
+@media only screen and (max-width: 75em) {
+  .search-wrapper .search-container .search-results {
+    width: 95%;
+  }
+}
 .search-wrapper .search-container .search-results::-webkit-scrollbar {
   display: none !important;
 }
 .search-wrapper .search-container .search-results ul {
   list-style-type: none;
   text-align: center;
+  padding: 0;
 }
 .search-wrapper .search-container .search-results ul li {
   margin-bottom: 2rem;
@@ -589,11 +611,21 @@ header {
   color: #FFF;
   margin: 0;
 }
+@media only screen and (max-width: 75em) {
+  .search-wrapper .search-container .search-results ul li a h5 {
+    font-size: 2.4rem;
+  }
+}
 .search-wrapper .search-container .search-results ul li a p {
   width: 65%;
   color: #FFF;
   margin: 0;
   margin: 0 auto;
+}
+@media only screen and (max-width: 75em) {
+  .search-wrapper .search-container .search-results ul li a p {
+    width: 95%;
+  }
 }
 
 .search {
@@ -617,6 +649,16 @@ header {
   color: #FFF;
   font-weight: 500;
   font-size: 1.6rem;
+}
+@media only screen and (max-width: 75em) {
+  .search {
+    background-color: transparent;
+    width: auto;
+    padding: 0 1rem;
+    right: 70px;
+    color: #c6132f;
+    z-index: 999991;
+  }
 }
 .search i {
   font-size: 2.8rem;
@@ -825,7 +867,7 @@ header {
 
 .button_container {
   position: fixed;
-  top: 5%;
+  top: 6%;
   right: 2%;
   height: 27px;
   width: 35px;
@@ -957,6 +999,9 @@ header {
 }
 .overlay ul .menu-item-101:hover {
   background-color: transparent !important;
+}
+.overlay ul .sub-menu {
+  display: none;
 }
 .overlay ul li {
   display: block;
